apps/operators/argo-workflows/ts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts-argo-workflows
spec:
  ports:
    - name: https
      port: 443
      targetPort: 2746
  type: ClusterIP
