apps/operators/argo-workflows/ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argoworkflows
  labels:
    tailscale.com/proxy-class: acceptroutes
spec:
  defaultBackend:
    service:
      name: ts-argo-workflows 
      port:
        number: 443
  ingressClassName: tailscale
  tls:
    - hosts:
        - workflows
